Вывод таблицы и работа со сторедж

--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,8 @@
 
   "background": {
     "scripts": [
-      "popup.js"
+      "popup.js",
+      "PaymentClass.js"
     ],
     "persistent": false
   },
